# netmon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  reactor-notes.md
.github/: dependabot.yml
assets/: app.rc
installer/: build-installer.ps1  netmon-rs.iss
src/: config.rs  device.rs  history.rs  main.rs  monitor.rs  setup.rs
src/ui/: cards.rs  chart.rs  mod.rs  settings.rs  window_icon.rs
