[package]
name = "netmon-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "A native Windows network monitor (WinUI 3 / windows-rs) showing live latency, packet loss, and history."

[dependencies]
windows-reactor = { git = "https://github.com/microsoft/windows-rs", rev = "9d457ede95cb41433573a096b4f829074beb1a2b" }
windows-numerics = { git = "https://github.com/microsoft/windows-rs", rev = "9d457ede95cb41433573a096b4f829074beb1a2b" }
windows-canvas = { git = "https://github.com/microsoft/windows-rs", rev = "9d457ede95cb41433573a096b4f829074beb1a2b" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
rev = "9d457ede95cb41433573a096b4f829074beb1a2b"
features = [
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "sysinfoapi",
    "minwinbase",
    "minwindef",
    "windef",
    "winnt",
]

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", rev = "9d457ede95cb41433573a096b4f829074beb1a2b" }
embed-resource = "3"

[profile.release]
panic = "abort"
